feat(send email): finish email sending
