# middleware/auth_middleware.go
@@ -1,0 +1,35 @@
+package middleware
+
+import(
+	"go-gcs/auth"
+	"github.com/gin-gonic/gin"
+
+	"strings"
+	"net/http"
+)
+
+func AuthMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		authHeader := c.GetHeader("Authorization")
+		if authHeader == "" || !strings.HasPrefix(authHeader, "Bearer ") {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Missing or invalid Authorization Header"})
+			c.Abort()
+			return
+		}
+		tokenString := strings.TrimPrefix(authHeader, "Bearer ")
+		claims, err := auth.ParseToken(tokenString)
+		if err != nil {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid or expired token"})
+			c.Abort()
+			return
+		}
+		c.Set("username", claims.Username)
+		c.Set("id", claims.ID)
+		c.Next()
+	}
+}
+
+
+
+
+
