# model/user.go
@@ -7,3 +7,19 @@ type User struct {
 	Password string `json:"password"`
 	AvatarURL string `json:"avarar_url"`
 }
+
+type UpdateUser struct {
+	Username *string `json:"username, omitempty"`
+	Email *string `json:"email, omitempty"`
+	Password *string `json:"password, omitempty"`
+	AvatarURL *string `json:"avatar_url, omitempty"`
+}
+
+type UpdatePasswordWithOldPassword struct {
+	OldPassword string `json:"old_password"`
+	NewPassword string `json:"new_password"`
+}
+
+type SendEmail struct {
+	Email string `json:"email"`
+}
